[package]
name = "cgeo"
version = "0.1.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
license = "Apache-2.0"
edition = "2018"
keywords = ["geometry", "computational", "algorithm"]
repository = "https://github.com/chrissimpkins/cgeo"
description = "A 2D computational geometry library"
readme = "README.md"

exclude = [
    "/testdata/*"
]

[dependencies]
approx = "0.5.0"
num = "0.4.0"
# num-traits = "0.2.14"
rayon = "1.3.0"


[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.0.0"
tempdir = "0.3.7"


[[bench]]
name = "cgeo_benchmark"
harness = false
